--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div class="container">
-  <app-tool-bar></app-tool-bar>
-  <router-outlet></router-outlet>
-</div>
+
+<app-layout>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 
 
+</app-layout>
