--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/styles/fonts";
+@import "assets/styles/global";
 
-
+body{
+  margin: 0;
+  font-family: 'Ubuntu', sans-serif;
+}
 button{
   border-radius: 10px;
   background: brown;
@@ -9,4 +14,9 @@ button{
 
   background: #865e5e;
   }
+}
+
+.center{
+  display: grid;
+  place-content: center;
 }
