--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="wrapper">
+
+  <div class="tile" [title]="'t-'+tile"
+       *ngFor="let tile of tiles">{{tile}}</div>
+</div>
