--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "assets/styles/fonts";
 @import "assets/styles/global";
+@import "assets/styles/table";
 
 body{
   margin: 0;
