--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -9,8 +9,9 @@
   </div>
   <div class="end">
 
-    <div class="user center">
-      Hello Eliran!
+
+    <div class="user center" *ngIf="userName">
+      Hello {{userName}}!
     </div>
     <div class="cart">
       <div class="count">{{count}}</div>
