--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
-<app-side-bar></app-side-bar>
+<app-side-bar #sideBar></app-side-bar>
 <div class="content">
-
+    <h1>{{ sideBar.name }}</h1>
   <ng-content></ng-content>
 </div>
