auth & lazy loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 
-<app-layout>
+<app-navigation>
 
   <div class="container">
     <router-outlet></router-outlet>
   </div>
 
 
-</app-layout>
+</app-navigation>
