--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngFor="let item of cart">
+<ng-container *ngFor="let item of cart$ | async">
   <app-item class=""
             [item]="item"
             [existInCart]="true"
