--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="top">
+<div class="top" *ngIf="viewObj$ | async as viewObj">
   <div class="start">
 
     <div class="nav" *ngFor="let l of links" routerLinkActive="active">
@@ -10,11 +10,12 @@
   <div class="end">
 
 
-    <div class="user center" *ngIf="userName$ | async as userName">
-      Hello {{userName}}!
+<!--    <div class="user center" *ngIf="userName$ | async as userName">-->
+      <div class="user center">
+      Hello {{viewObj.userName}}!
     </div>
     <div class="cart">
-      <div class="count">{{count}}</div>
+      <div class="count">{{numInCart$ | async}}</div>
       <button>Go to cart</button>
     </div>
   </div>
