--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
       Hello {{viewObj.userName}}!
     </div>
     <div class="cart">
-      <div class="count">{{numInCart$ | async}}</div>
+      <div class="count">{{viewObj.numInCart}}</div>
       <button>Go to cart</button>
     </div>
   </div>
