add material & library.readme.md

--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,7 +1,5 @@
 <div class="filter mrg-x-4" >
-  Filter
-  <input type="text" [formControl]="filterForm">
-
+  <ac-input [config]="filterConfig" [formControl]="filterForm"></ac-input>
 </div>
 <ag-grid-angular
   class="ag-theme-alpine"
