--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="cart">
       <div class="count">{{viewObj.numInCart}}</div>
-      <button>Go to cart</button>
+      <ac-button>Go to cart</ac-button>
     </div>
   </div>
 </div>
