--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -18,6 +18,10 @@ $arr: 1 2 3 4 5 6 7 8 9 10 16;
     margin-top: times8($size);
   }
   .mrg-x-#{$size} {
+    margin-right: times8($size);
+    margin-left: times8($size);
+  }
+  .mrg-y-#{$size} {
     margin-bottom: times8($size);
     margin-top: times8($size);
   }.mrg-b-#{$size} {
